[gd_scene load_steps=23 format=2]

[ext_resource path="res://UI/CharacterCards/SlotMachine.png" type="Texture" id=1]
[ext_resource path="res://UI/CharacterCards/godothead.png" type="Texture" id=2]
[ext_resource path="res://Effects/Coin.png" type="Texture" id=3]
[ext_resource path="res://Effects/HitEffect.png" type="Texture" id=4]
[ext_resource path="res://UI/AbilityUI.png" type="Texture" id=5]
[ext_resource path="res://UI/CharacterCards/SlotMachine.gd" type="Script" id=6]
[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "click",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 15, 11 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "shuffle",
"speed": 10.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "ability",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "coin",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "heart",
"speed": 5.0
} ]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0.709804, 0.317647, 1 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0.709804, 0.317647, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[node name="SlotMachine" type="AnimatedSprite"]
position = Vector2( 0, -37 )
scale = Vector2( 3, 3 )
frames = SubResource( 6 )
animation = "click"
script = ExtResource( 6 )

[node name="Slot1" type="AnimatedSprite" parent="."]
position = Vector2( -9, 3 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 11 )
playing = true

[node name="Slot2" type="AnimatedSprite" parent="."]
position = Vector2( 0, 3 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 11 )
playing = true

[node name="Slot3" type="AnimatedSprite" parent="."]
position = Vector2( 9, 3 )
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 11 )
playing = true

[node name="Button" type="Button" parent="."]
margin_left = -13.3333
margin_top = 16.6667
margin_right = 22.6667
margin_bottom = 32.6667
rect_scale = Vector2( 0.75, 0.75 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "Spin"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
